<LinearLayout  android:id="@+id/groups" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<EditText
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/select_intro"
		android:gravity="center"/>
    <Gallery
		android:id="@+id/gallery"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:gravity="center"
		android:padding="5dp"
		android:textStyle="italic"
		android:text="@string/show_intro" />
	<ImageView 
		android:id="@+id/picture"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:contentDescription="@string/picture"/>	
</LinearLayout>
