<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:orientation="vertical" >
    <LinearLayout    
        android:orientation="horizontal"    
        android:layout_width="fill_parent"    
        android:layout_height="wrap_content"    
        android:baselineAligned="false"  
        android:layout_weight="1"  >   
          
        <LinearLayout     
            android:orientation="horizontal"     
            android:layout_width="wrap_content"     
            android:layout_height="fill_parent"     
            android:layout_weight="1">     
            <TextView      
                android:text="@string/color_green"      
                android:textColor="#ff0000"      
                android:background="#00aa00"      
                android:layout_width="wrap_content"      
                android:layout_height="fill_parent"      
                android:layout_weight="1"/>     
            <TextView      
                android:text="@string/color_blue"      
                android:background="#0000aa"      
                android:layout_width="wrap_content"      
                android:layout_height="fill_parent"      
                android:layout_weight="1"/>    
        </LinearLayout>     
        <LinearLayout     
             android:orientation="vertical"     
             android:layout_width="wrap_content"     
             android:layout_height="fill_parent"     
             android:layout_weight="1">     
             <TextView      
                 android:text="@string/color_black"      
                 android:background="#000000"      
                 android:layout_width="fill_parent"      
                 android:layout_height="wrap_content"      
                 android:layout_weight="1"/>    
              <TextView      
                  android:text="@string/color_yellow"      
                  android:background="#aaaa00"      
                  android:layout_width="fill_parent"      
                  android:layout_height="wrap_content"      
                  android:layout_weight="1"/>     
              <TextView      
                  android:text="@string/color_unknown"      
                  android:background="#00aaaa"      
                  android:layout_width="fill_parent"      
                  android:layout_height="wrap_content"      
                  android:layout_weight="1"/>    
         </LinearLayout>    
    </LinearLayout>  
    <LinearLayout    
        android:orientation="vertical"    
        android:layout_width="fill_parent"    
        android:layout_height="wrap_content"    
        android:layout_weight="2">    
        <TextView     
            android:text="@string/color_red"     
            android:gravity="fill_vertical"     
            android:background="#aa0000"     
            android:layout_width="fill_parent"     
            android:layout_height="wrap_content"     
            android:layout_weight="2"/>    
        <TextView     
            android:text="@string/color_white"     
            android:textColor="#ff0000"     
            android:background="#ffffff"     
            android:layout_width="fill_parent"     
            android:layout_height="wrap_content"     
            android:layout_weight="2"/>   
    </LinearLayout>    
</LinearLayout>  

